2006-04-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sdr-repository-cmds.c: Adjust get sdr max
	record data length.

	* libfreeipmi/src/ipmi-sdr-record-types.c,
	libfreeipmi/include/freeipmi/ipmi-sdr-record-types.h,
	common/src/ipmi-sensor-api.c,
	common/src/ipmi-sdr-repository-cache-api.c: Fix up template names.
	
2006-04-06  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Check kcs context
	errnum rather than errno.

	* libfreeipmi/src/ipmi-udm.c,
	libfreeipmi/include/freeipmi/ipmi-udm.h: Remove template pointers.
	
	* libfreeipmi/src/ipmi-sol-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-sol-cmds.h: Various code
	cleanup.

	* bmc-info/doc/Makefile.am, bmc-info/doc/bmc-info.8.pre.in,
	ipmi-raw/doc/Makefile.am, ipmi-raw/doc/ipmi-raw.8.pre.in: Removed
	files. Moved Makefile.am info and manpages one directory up to be
	consistent to rest of library.

2006-04-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-sensor-cmds-udm.c
	(ipmi_cmd_get_sensor_thresholds): Fix function call cut and paste
	typo.

	* common/src/ipmi-sel-api.c (_get_event_message): Fix output bug.
	
2006-04-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-sol-cmds.h: Add SOL sequence
	number max definition.
	
2006-04-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_inband): Fix
	no-probing bug.
	
2006-04-03  Anand Babu  <ab@zresearch.com>
	* libfreeipmi/src/ipmi-locate-smbios.c: check if record length >=
	16. It was > 16 before. Found while running on IBM e325.
	
2006-04-04  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_powercmd.c:
	Remove all use of "error_occurred" flag.  The flag is no longer
	necessary.

	* ipmipower/src/ipmipower_powercmd.c (_recv_packet): Fix check
	ordering bug.
	
2006-04-03  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi-faq.texi: Updated x86-64 platform related
	questions.
	* doc/freeipmi.texi: Updated.