@@ -3696,7 +3696,10 @@ ex_get_sdr_repository_info ()
   char version_string[17];
   uint8_t sdr_major_version;
   uint8_t sdr_minor_version;
-  
+  uint8_t record_count_ls_byte;
+  uint8_t record_count_ms_byte;
+  uint16_t record_count;
+  uint8_t *ptr;
   uint64_t val;
   
   /* get_repository_info */
@@ -3731,11 +3734,24 @@ ex_get_sdr_repository_info ()
                                               gh_str02scm ("sdr_version"), 
                                               gh_str02scm (version_string));
   
-  if (fiid_obj_get (cmd_rs, "record_count", &val) < 0)
+  if (fiid_obj_get (cmd_rs, "record_count_ls_byte", &val) < 0)
     goto cleanup;
+  record_count_ls_byte = val;
+  if (fiid_obj_get (cmd_rs, "record_count_ms_byte", &val) < 0)
+    goto cleanup;
+  record_count_ms_byte = val;
+  ptr = (uint8_t *)&record_count;
+#if WORDS_BIGENDIAN
+  ptr[1] = record_count_ls_byte;
+  ptr[0] = record_count_ms_byte;
+#else
+  ptr[0] = record_count_ls_byte;
+  ptr[1] = record_count_ms_byte;
+#endif
+
   scm_repository_info_list = scm_assoc_set_x (scm_repository_info_list, 
                                               gh_str02scm ("record_count"), 
-                                              gh_long2scm (val));
+                                              gh_long2scm (record_count));
   
   if (fiid_obj_get (cmd_rs, "free_space", &val) < 0)
     goto cleanup;
